Add dependency and plugins in the pom.xml for running unit test.
Add spark Base test class and test job for CsvIngestion job